Add assets for admin area, replace images with purchase royalty free versions. Some basic styling on login and registration pages

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,9 @@ framework:
     php_errors:
         log: true
 
+    # For FOS User
+    translator: ~
+
 # Twig Configuration
 twig:
     debug: '%kernel.debug%'
